MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
@import "../../map_modules/variables";
@import "../../map_modules/mixins";

.permission-group-table {
    width: 100%;

    thead {
        border-bottom: 2px solid $charcoal;

        tr th {
            padding-bottom: .5em;

            &.col-group-user-icon {
                width: 2em;
            }

            &.col-permission-download,
            &.col-permission-upload,
            &.col-permission-delete {
                width: 6em;
                padding: .25em 0;
            }

            &.col-permissions {
                padding: .25em 0;
                border-bottom: 1px solid $charcoal;
            }

            &.col-actions {
                width: 4em;
            }
        }
    }

    .group-name-input {
        font-weight: bold;
        color: $charcoal;
        padding: 0;
    }

    th.content-right,
    td.content-right {
        text-align: right;
    }

    .table-icon {
        height: 1.5em;
        width: 1.5em;
    }

    td.add-user {
        svg {
            color: $green;
        }

        .action-icon-container-inline {
            margin: 0 !important;
        }
    }

    td.remove-user {

        svg {
            color: $red;

            &:hover {
                color: lighten($red, .5);
            }
        }

        .action-icon-container-inline {
            margin: 0 !important;
        }
    }

    tbody {

        tr {

            &.last-group-row,
            &.action-row {
                border-bottom: 1px solid $charcoal;
            }

            &.last-group-row td {
                padding-bottom: 1.5em;
            }

            &.first-group-row td {
                padding-top: 1.5em;
            }

            &.action-row {
                cursor: pointer;

                .action-text {
                    color: $green;
                    font-weight: bold;
                }
            }

            td {
                padding-top: .5em;
                padding-bottom: .5em;

                .selection-option-container {
                    justify-content: center;
                    align-items: center;
                    padding: 0;
                    margin: 0;

                    .selection-option-label {
                        height: 1em;
                    }
                }
            }
        }
    }
}

